--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "dev": "nodemon src/server.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
+    "@types/slug": "^5.0.3",
     "nodemon": "^2.0.20",
     "prisma": "^4.6.1",
     "ts-node": "^10.9.1",
@@ -19,8 +22,11 @@
     "@graphql-tools/schema": "^9.0.10",
     "@prisma/client": "^4.6.1",
     "apollo-server-express": "^3.11.1",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "slug": "^8.2.2"
   }
 }
