--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^4.6.1",
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
