--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@types/slug": "^5.0.3",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.20",
     "prisma": "^4.6.1",
     "ts-node": "^10.9.1",
@@ -23,11 +24,13 @@
     "@prisma/client": "^4.6.1",
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
+    "bson-objectid": "^2.0.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
-    "slug": "^8.2.2"
+    "slug": "^8.2.2",
+    "uuid": "^9.0.0"
   }
 }
