--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^18.11.9",
     "@types/slug": "^5.0.3",
     "@types/uuid": "^8.3.4",
+    "@types/ws": "^8.5.3",
     "nodemon": "^2.0.20",
     "prisma": "^4.6.1",
     "ts-node": "^10.9.1",
@@ -29,8 +30,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.11.2",
     "jsonwebtoken": "^8.5.1",
     "slug": "^8.2.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ws": "^8.11.0"
   }
 }
